--- a/labeler/static/single_image.css
+++ b/labeler/static/single_image.css
@@ -7,6 +7,8 @@
 .anchor, .to-label {
   box-shadow: 0px 0px;
   height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .hidden-transparent {
